# partio

./: .gitignore  CMakeLists.txt  build.sh  changeLog.html  index.html  params.json  partioEmitter.html  partioExport.html  partioImport.html  partioInstancer.html  partioVisualizer.html
contrib/: CMakeLists.txt
contrib/cmake/: FindArnold.cmake  FindMaya.cmake  FindMtoA.cmake
contrib/partio4Arnold/: CMakeLists.txt
contrib/partio4Arnold/plugin/: CMakeLists.txt  PartioVizTranslator.cpp  PartioVizTranslator.h  plugin.cpp
contrib/partio4Arnold/procedurals/: CMakeLists.txt
contrib/partio4Arnold/shaders/: AEpartioPointTemplate.mel  Loader.cpp  Makefile  partioPoint.cpp
contrib/partio4Maya/: .partioExport.cpp.kate-swp  CMakeLists.txt  iconArrays.h  partio4MayaShared.cpp  partio4MayaShared.h  partioCache.cpp  partioCache.h  partioEmitter.cpp  partioEmitter.h  partioExport.cpp  partioExport.h  partioImport.cpp  partioImport.h  partioInstancer.cpp  partioInstancer.h  partioVisualizer.cpp  partioVisualizer.h  plugin.cpp
downloads/: partio4Maya-0.9.3b_10-05-2012.rar
src/doc/: CMakeLists.txt
src/lib/: CMakeLists.txt  Partio.h  PartioAttribute.h  PartioSe.cpp  PartioSe.h  PartioVec3.h
src/lib/core/: KdTree.h  (+8 more)
src/py/: CMakeLists.txt  partio.i
src/tests/: CMakeLists.txt  testcache.cpp  testcache.h  testiterator.cpp  testiterator.h  testkdtree.cpp  testkdtree.h  testparticlessimple.cpp  testparticlessimple.h  testsaveload.cpp  testsaveload.h  teststr.cpp  teststr.h
src/tools/: CMakeLists.txt  Camera.h  partinfo.cpp  partview.h
stylesheets/: stylesheet.css
(+38 files in other folders)
